# ZK-Auth

./: .gitignore  Cargo.toml  Nargo.toml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: args.rs  lib.rs  main.rs
backend/src/errors/: mod.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs
backend/src/services/: auth_hashing_service.rs  auth_service.rs  auth_zk_service.rs  mod.rs
backend/src/utils/: crypto.rs
backend/src/utils/db/: connect.rs  state.rs
backend/tests/: auth_hashing_test.rs  auth_test.rs
backend/tests/common/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/stores/: toast.ts
frontend/src/lib/ui/: Button.svelte  Card.svelte  Input.svelte  LoginForm.svelte  Navbar.svelte  RegisterForm.svelte  Toast.svelte  Toasts.svelte  ToggleTheme.svelte
frontend/src/lib/utils/: api.ts  toast.ts  zk.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/hash-login/: +page.svelte
frontend/src/routes/hash-register/: +page.svelte
frontend/src/routes/simple-login/: +page.svelte
frontend/src/routes/simple-register/: +page.svelte
frontend/src/routes/zk-register/: +page.svelte
static/circuits/age/: Nargo.toml
static/circuits/login/src/: main.nr
static/circuits/password/: Nargo.toml
