[workspace]
members = ["backend"]
resolver = "3"

[workspace.dependencies]
axum = "0.8.4"
clap = { version = "4.5.27", features = ["derive", "env"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.3.1", features = ["kv-mem"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
validator = "0.20.0"
validator_derive = "0.20.0"
