[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
